[package]
name = "password_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
argon2 = "0.5.3"
rand = "0.8.5"
termion = "1.5"
tui = { version = "0.19", default-features = false, features = ['termion', 'crossterm'] }
crossterm = "0.25"
dirs = "5.0.1"
once_cell = "1.12.0"
